[gd_scene load_steps=6 format=3 uid="uid://bv22qhxctrvrs"]

[ext_resource type="Script" path="res://world/world_generator.gd" id="1_5a068"]
[ext_resource type="TileSet" uid="uid://cslqpt5dkf280" path="res://world/assets/tilesets/BasicBiomes.tres" id="2_twdmj"]
[ext_resource type="Script" path="res://world/Camera2D-Extended.gd" id="3_flcep"]
[ext_resource type="PackedScene" uid="uid://ct6163cdevvdl" path="res://world/gui.tscn" id="4_hcpx3"]
[ext_resource type="PackedScene" uid="uid://cb2wcdmwyqjuy" path="res://world/chars/CharacterPlayer.tscn" id="5_d1x15"]

[node name="World" type="Node2D"]
script = ExtResource("1_5a068")
world_size = Vector2i(1080, 720)

[node name="CharacterPlayer" parent="." instance=ExtResource("5_d1x15")]
z_index = 1
position = Vector2(46, 35)

[node name="WorldMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("2_twdmj")
format = 2
layer_0/name = "base"
layer_0/y_sort_enabled = true
layer_1/name = "structure"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = "details"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
script = ExtResource("3_flcep")
min_zoom = 0.038

[node name="GUI" parent="." instance=ExtResource("4_hcpx3")]
layer = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1282.0
offset_bottom = 725.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -13.5
offset_right = 37.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "Generating..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="GeneratingTotalLabel" type="Label" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 16.5
offset_right = 48.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
text = "(0/0)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GeneratingTotalProgress" type="ProgressBar" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = 48.5
offset_right = 166.0
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
